# 8-classes-rice-disease-classifier-api-main-Streamlit

./: .gitignore  README.md  pyproject.toml  streamlit_frontend.py
app/: config.py  main.py  models.py  schemas.py  services.py
conf/: config.yaml
